Setup to work separately

--- a/HomePage.html
+++ b/HomePage.html
@@ -15,8 +15,8 @@
     <img class="homepageimage" src="HomePage.png" height="350" width="750">
     </div>
     <ul>
-        <li><a href="">Anxiety</a></li>
-        <li><a href="">Tips</a></li>
+        <li><a href="Page 2.html">Anxiety 101</a></li>
+        <li><a href="Page 3.html">Tips</a></li>
         <li><a href="">Contact</a></li>
       </ul>
 
