--- a/Page 2.html
+++ b/Page 2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Anxiety?</title>
+    <title>Anxiety 101</title>
     <link rel="stylesheet"  href="Anxiety 2.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
     <script src="anxiety2.js"></script>
@@ -22,7 +22,7 @@
 
 <body>
   
-    <h1>WHAT IS IT?</h1>
+    <h1>Anxiety 101</h1>
 
     <main>
       <p>Anxiety is a normal, if unpleasant, part of life, 
