--- a/Page 2.html
+++ b/Page 2.html
@@ -6,7 +6,6 @@
     <title>Anxiety 101</title>
     <link rel="stylesheet"  href="Anxiety 2.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-    <script src="anxiety2.js"></script>
 </head>
 
 <!-- The sidebar -->
@@ -21,7 +20,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 
 <body>
-  
+ 
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <script src="anxiety3.js"></script>
+
     <h1>Anxiety 101</h1>
 
     <main>
@@ -32,11 +34,30 @@
       be it a work, relationship or money problems, etc.) 
       comes and goes, anxiety is something that can persist 
       whether or not the cause is clear to the sufferer.</p>
+
+      <p>Anxiety shows itself in many ways, and there are different types of anxiety. Some people have panic attacks,
+        some people can get irritable, some people can get teary, some have many symptoms but not all of them.
+        If you think you might be suffering from anxiety, we recommend you speak to someone you trust or your GP.
+        Always remember, you are not alone.</p>
+      </br>
+
+
     </main>
 
-    <div style="text-align:center"> 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/XiCrniLQGYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+  <div style="text-align:center">
+    <img class="reminder" src="reminder.jpg" height="250" width="440">
+  </div>
+  
+  </br>
+
+  <div style="text-align:center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/IaPN9KQoYbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+    </br>
+
+  <div style="text-align:center"> 
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XiCrniLQGYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 
 </body>
 </html>
