--- a/Page 3.html
+++ b/Page 3.html
@@ -53,6 +53,8 @@
       <a href="https://www.nhs.uk/live-well/eat-well/water-drinks-nutrition/" open>
         <img src="Water.jpeg" alt="Water" width="214" height="142">
         </a>
-
+    
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <script src="anxiety3.js"></script>
     </main>
     </body>
