--- a/Page 2.html
+++ b/Page 2.html
@@ -13,7 +13,8 @@
   <a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
   <a href="Page 2.html"><i class="fas fa-question"></i></i> Anxiety 101</a>
   <a href="Page 3.html"><i class="fas fa-hands-helping"></i> Tips</a>
-  <a href="#contact"><i class="fas fa-phone-square-alt"></i> Contact</a>
+  <a href="Page 4.html"><i class="fas fa-phone-square-alt"></i> Get in Touch</a>
+  <a href="Page 5.html"><i class="fas fa-address-book"></i> Support</a>
 </div>
 
 <!-- Load an icon library -->
