--- a/Page 2.html
+++ b/Page 2.html
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anxiety 101</title>
-    <link rel="stylesheet"  href="Anxiety 2.css">
-    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anxiety 101</title>
+  <link rel="stylesheet" href="Anxiety.css">
+  <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 </head>
 
 <!-- The sidebar -->
-<div class="sidebar">
-  <a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
+<div class="sidenav">
+  <div class="TopOption"></div><a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
   <a href="Page 2.html"><i class="fas fa-question"></i></i> Anxiety 101</a>
   <a href="Page 3.html"><i class="fas fa-hands-helping"></i> Tips</a>
   <a href="Page 4.html"><i class="fas fa-phone-square-alt"></i> Get in Touch</a>
   <a href="Page 5.html"><i class="fas fa-address-book"></i> Support</a>
 </div>
 
+
 <!-- Load an icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 
 <body>
- 
+  <div class="marginforpage">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <script src="anxiety3.js"></script>
 
-    <h1>Anxiety 101</h1>
+  <h1>Anxiety 101</h1>
 
-    <main>
-      <p>Anxiety is a normal, if unpleasant, part of life, 
-      and it can affect us all in different ways 
-      and at different times. 
-      Whereas stress is something that will come and go as the external factor causing it (
-      be it a work, relationship or money problems, etc.) 
-      comes and goes, anxiety is something that can persist 
-      whether or not the cause is clear to the sufferer.</p>
+  <main>
+    <p>Anxiety is a normal, if unpleasant, part of life,
+      and it can affect us all in different ways
+      and at different times.
+      Whereas stress is something that will come and go as the external factor causing it (be it a work, relationship or 
+      money problems, etc.) comes and goes, anxiety is something that persists whether or not the cause is clear to the sufferer.</p>
 
-      <p>Anxiety shows itself in many ways, and there are different types of anxiety. Some people have panic attacks,
-        some people can get irritable, some people can get teary, some have many symptoms but not all of them.
-        If you think you might be suffering from anxiety, we recommend you speak to someone you trust or your GP.
-        Always remember, you are not alone.</p>
-      </br>
-
-
-    </main>
-
-  <div style="text-align:center">
-    <img class="reminder" src="reminder.jpg" height="250" width="440">
-  </div>
-  
-  </br>
-
-  <div style="text-align:center">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/IaPN9KQoYbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+    <p>Anxiety shows itself in many ways, and there are different types of anxiety. Some people have panic attacks,
+      some people can get irritable, some people can get teary, some have many symptoms but not all of them.
+      If you think you might be suffering from anxiety, we recommend you speak to someone you trust or your GP.
     </br>
+      Always remember, you are not alone.</p>
+  </main>
 
-  <div style="text-align:center"> 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/XiCrniLQGYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="row2">
+    <div class="column2">
+      <iframe style="float:right" height=300px width=500px src="https://www.youtube.com/embed/IaPN9KQoYbs" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="column2">
+      <iframe height=300px width=500px align-content=center src="https://www.youtube.com/embed/XiCrniLQGYc" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+  <br>
+  <div style="text-align:center">
+    <img class="reminder" src="reminder.jpg" height="300" width="490">
   </div>
 
 </body>
+
 </html>
