--- a/Page 3.html
+++ b/Page 3.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tips</title>
-    <link rel="stylesheet"  href="Anxiety 2.css">
-    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-    <script src="anxiety3.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tips</title>
+  <link rel="stylesheet" href="Anxiety.css">
+  <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+  <script src="anxiety3.js"></script>
 </head>
 
 <!-- The sidebar -->
-<div class="sidebar">
-  <a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
-  <a href="Page 2.html"><i class="fas fa-question"></i> Anxiety 101</a>
-  <a href="Page 3.html"><i class="fas fa-hands-helping"></i></i> Tips</a>
+<div class="sidenav">
+  <div class="TopOption"></div><a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
+  <a href="Page 2.html"><i class="fas fa-question"></i></i> Anxiety 101</a>
+  <a href="Page 3.html"><i class="fas fa-hands-helping"></i> Tips</a>
   <a href="Page 4.html"><i class="fas fa-phone-square-alt"></i> Get in Touch</a>
   <a href="Page 5.html"><i class="fas fa-address-book"></i> Support</a>
 </div>
+
 
 <!-- Load an icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 
 <body>
-  
-    <h1>TIPS</h1>
+  <div class="marginforpage">
+  <h1>Tips</h1>
 
-    <main>
-      <p>The best tip we can give is to seek help at the earliest opportunity.<br>
-        Talk to your friends, your family or partner, but if you want to talk in confidence, talk to your GP.<br>
-        They can recommend different forms of help, from therapy to medication. <br>
-        Mental Health issues are not a one size fits all.
-      </p>
+  <main>
+    <p>The best tip we can give is to seek help at the earliest opportunity.<br>
+      Talk to your friends, your family or partner, but if you want to talk in confidence, talk to your GP.<br>
+      They can recommend different forms of help, from therapy to medication. <br>
+      Mental Health issues are not a one size fits all.
+    </p>
     </br>
-      <h2>Here are a few other things that could help you</h2>
+    <div style="text-align:center">
+    <h2>Here are a few other things that could help you</h2>
     </br>
-      <ol>The Worry Tree - download your own copy by clicking the tree</ol>
-      <a href="https://www.getselfhelp.co.uk/docs/worrytree.pdf" download>
-        <img src="Tree.jpeg" alt="Tree" width="214" height="142">
-      </a>
-      <ol>Try using Worry Time - download more information by clicking the clock</ol>
-      <a href="https://www.getselfhelp.co.uk/docs/WorryZones.pdf" download>
-        <img src="Clock.jpeg" alt="Clock" width="214" height="142">
-      </a>
-      <ol>Get proper sleep - this can be hard, we know</ol>
-      <a href="https://www.nhs.uk/live-well/sleep-and-tiredness/how-to-get-to-sleep/" open>
-        <img src="Sleep.jpeg" alt="Sleep" width="214" height="142">
-        </a>
-      <ol>Exercise - go for a walk, a swim, or a jog if you can</ol>
-      <a href="https://www.nhs.uk/live-well/exercise/" open>
-        <img src="Exercise.jpeg" alt="Exercise" width="214" height="142">
-        </a>
-      <ol>Drink Water - keeping refreshed is good for you!</ol>
-      <a href="https://www.nhs.uk/live-well/eat-well/water-drinks-nutrition/" open>
-        <img src="Water.jpeg" alt="Water" width="214" height="142">
-        </a>
-    
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        <script src="anxiety3.js"></script>
-    </main>
-    </body>
+    <ol>The Worry Tree - download your own copy by clicking the tree</ol>
+    <a href="https://www.getselfhelp.co.uk/docs/worrytree.pdf" download>
+      <img src="Tree.jpeg" alt="Tree" width="214" height="142">
+    </a>
+    <ol>Try using Worry Time - download more information by clicking the clock</ol>
+    <a href="https://www.getselfhelp.co.uk/docs/WorryZones.pdf" download>
+      <img src="Clock.jpeg" alt="Clock" width="214" height="142">
+    </a>
+    <ol>Get proper sleep - this can be hard, we know</ol>
+    <a href="https://www.nhs.uk/live-well/sleep-and-tiredness/how-to-get-to-sleep/" open>
+      <img src="Sleep.jpeg" alt="Sleep" width="214" height="142">
+    </a>
+    <ol>Exercise - go for a walk, a swim, or a jog if you can</ol>
+    <a href="https://www.nhs.uk/live-well/exercise/" open>
+      <img src="Exercise.jpeg" alt="Exercise" width="214" height="142">
+    </a>
+    <ol>Drink Water - keeping refreshed is good for you!</ol>
+    <a href="https://www.nhs.uk/live-well/eat-well/water-drinks-nutrition/" open>
+      <img src="Water.jpeg" alt="Water" width="214" height="142">
+    </a>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <script src="anxiety3.js"></script>
+
+  </main>
+</body>
