--- a/Page 4.html
+++ b/Page 4.html
@@ -21,6 +21,9 @@
 
 
 <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <script src="anxiety3.js"></script>
+
 <div class="marginforpage">
     <h1>Get in Touch</h1>
 <main>Whilst we hope that this site is helpful and has provided support to you, we understand that sometimes the best thing 
@@ -65,4 +68,5 @@ additional self-help resources and updates on our site.</main>
   </div>
 </div>
 </br></br>
+
 </body>
