--- a/Page 5.html
+++ b/Page 5.html
@@ -28,17 +28,17 @@
     <div class="row">
         <div class="column">
             <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/about-anxiety/">
-            <img class="link-style" border="0" alt="Mind UK" src="MindCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="Mind UK" src="MindCharity.png" width="280" height="155" />
             </a>
         </div>
         <div class="column">
             <a href="https://www.anxietyuk.org.uk/">
-            <img class="link-style" border="0" alt="Anxiety UK" src="AnxietyUKCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="Anxiety UK" src="AnxietyUKCharity.png" width="280" height="155" />
             </a>
         </div>
         <div class="column">
             <a href="https://nopanic.org.uk/">
-            <img class="link-style" border="0" alt="No Panic" src="NoPanicCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="No Panic" src="NoPanicCharity.png" width="280" height="155" />
             </a>
         </div>
       </div>
@@ -46,20 +46,23 @@
       <div class="row">
         <div class="column">
             <a href="https://www.samaritans.org/">
-            <img class="link-style" border="0" alt="Samaritans" src="SamaritansCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="Samaritans" src="SamaritansCharity.png" width="280" height="155" />
             </a>
         </div>
         <div class="column">
             <a href="https://www.nhs.uk/conditions/stress-anxiety-depression/understanding-panic/">
-            <img class="link-style" border="0" alt="NHS" src="NHSCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="NHS" src="NHSCharity.png" width="280" height="155" />
             </a>
           </div>
         <div class="column">
             <a href="https://www.good-thinking.uk/">
-            <img class="link-style" border="0" alt="Good Thinking London" src="GoodThinkingCharity.png" width="280" height="155" />
+            <img class="link-style" border-box="0" alt="Good Thinking London" src="GoodThinkingCharity.png" width="280" height="155" />
             </a>
           </div>
       </div>
 </div>
+
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<script src="anxiety3.js"></script>
 
     </body>
