--- a/Page 5.html
+++ b/Page 5.html
@@ -10,7 +10,7 @@
 </head>
 
 <div class="sidenav">
-    <div class="TopOption"></div><a href="HomePage.html"><i class="fas fa-home"></i> Home</a>
+    <div class="TopOption"></div><a href="index.html"><i class="fas fa-home"></i> Home</a>
     <a href="Page 2.html"><i class="fas fa-question"></i></i> Anxiety 101</a>
     <a href="Page 3.html"><i class="fas fa-hands-helping"></i> Tips</a>
     <a href="Page 4.html"><i class="fas fa-phone-square-alt"></i> Get in Touch</a>
